<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">F12</string>
	<string name="activity_pref">Preferences</string>
	<string name="pref_cat_1">Design</string>
	<string name="pref_cat_1_list_1">Theme(Invalid)</string>
	<string name="pref_cat_1_cb_1">TreeView Animation</string>
	<string name="pref_cat_1_cb_summary">Toggle TreeView Animation</string>
	<string name="pref_cus">Custom...</string>
	<string name="pref_cus_hint">RGB Color(#xxxxxx)</string>
	<string name="pref_cus_error">Invalid color</string>
	<string name="ad_pb1">Ok</string>
	<string name="ad_nb1">Cancel</string>
	<string name="ad_pb2">Yes</string>
	<string name="ad_nb2">No</string>
	<string name="main_menu_1">Preferences</string>
	<string name="main_menu_2">About</string>
	<string name="main_menu_3">Cookie Manager</string>
	<string name="main_menu_5">Source of.current page</string>
	<string name="main_menu_4">Left Panel</string>
	<string name="main_menu_6">Right Panel</string>
	<string name="au_l_1">Version 1.0.0</string>
	<string name="au_l_2">Developer</string>
	<string name="au_l_2_1">Alcatraz</string>
	<string name="au_l_3">View source(Invalid)</string>
	<string name="au_l_4">View in market</string>
	<string name="au_l_4_1">GooglePlay</string>
	<string name="l_1">Transmit</string>
	<string name="l_2">Avg. speed</string>
	<string name="l_3">White Screen</string>
	<string name="l_4">DOM Construct</string>
	<string name="l_5">First Screen</string>
	<string name="l_6">Full Load</string>
	<string name="l_7">Sources</string>
	<string name="pre_nb">Close</string>
	<string name="pre_pb">Download</string>
	<string name="download_hint_1">Directory</string>
	<string name="download_fail">Download Failed</string>
	<string name="download_complete">Download Complete</string>
	<string name="r_1">Consle</string>
	<string name="r_2">Cookies</string>
	<string name="r_3">Request a desktop version</string>
	<string name="r_4">Editor Mode</string>
	<string name="r_useragent">User Agent</string>
	<string name="ua_radio_1">Default Android</string>
	<string name="ua_radio_2">PC</string>
	<string name="copy">This paragragh has been copied</string>
	<string name="type">Output:</string>
	<string name="modify">Modify</string>
	<string name="modify_hint">Cookie (split by ;)</string>
	<string name="load_error">Please load a website first</string>
	<string name="page">Commit</string>
	<string name="wait">This process need a moment,Please wait...</string>
	<string name="pref_cat_2">Data</string>
	<string name="click_inspect">Click to inspect</string>
	<string name="pref_scr_2">Clear Data</string>
	<string name="pref_scr_2_summary">Show application info</string>
	<string name="inspect_mode">Inspect</string>
	<string name="ins_check">To RightPanel  </string>
	<string name="lock_drawer">Lock Drawers</string>
	<string name="encry_def">(DATA)</string>
	<string name="cookie_create">Creation UTC</string>
	<string name="cookie_host_key">Host Key</string>
	<string name="cookie_name">Name</string>
	<string name="cookie_value">Value</string>
	<string name="cookie_path">Path</string>
	<string name="cookie_expiresutc">Expires UTC</string>
	<string name="cookie_secure">Secure</string>
	<string name="cookie_httponly">HttpOnly</string>
	<string name="cookie_lastaccessutc">LastAccess UTC</string>
	<string name="cookie_has_expires">Has Expires</string>
	<string name="cookie_persistent">Persistent</string>
	<string name="cookie_priority">Priority</string>
	<string name="cookie_encry">Encrypted Value</string>
	<string name="cookie_firsr_party_only">FirstPartyOnly</string>
	<string name="cookie_toast">Database updated,requires a restart application to apply change</string>
	<string name="cookie_restart">Kill Process</string>
	<string name="inspect_Summ">LongClick to clear the highlight</string>
</resources>
