<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
		android:title="@string/pref_cat_1">
		<ListPreference
			android:enabled="false"
			android:defaultValue="blue"
			android:key="theme"
			android:title="@string/pref_cat_1_list_1"
			android:entries="@array/entries_list_preference"
			android:entryValues="@array/entryvalues_list_preference"
			android:dialogTitle="@string/pref_cat_1_list_1" />
		<CheckBoxPreference
			android:key="inspect_anim"
			android:summary="@string/pref_cat_1_cb_summary"
			android:title="@string/pref_cat_1_cb_1"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/pref_cat_2">
		<PreferenceScreen
			android:key="hl"
			android:summary="@string/pref_scr_2_summary"
			android:title="@string/pref_scr_2"/>
	</PreferenceCategory>
</PreferenceScreen>
		
