<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<android.support.design.widget.TextInputLayout
		android:id="@+id/textInputLayout12"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="16dp">

		<EditText
			android:singleLine="true"
			android:hint="@string/download_hint_1"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:ems="10"/>

	</android.support.design.widget.TextInputLayout>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:gravity="left|center"
		android:id="@+id/downloadproLinearLayout1"
		android:visibility="gone">

		<ProgressBar
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_margin="16dp"/>

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="vertical">

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="wrap_content"
				android:id="@+id/downloadproTextView1"/>

			<ProgressBar
				style="?android:attr/progressBarStyleHorizontal"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:id="@+id/downloadproProgressBar1"
				android:layout_marginRight="16dp"/>

		</LinearLayout>

	</LinearLayout>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:gravity="right|center">

		<Button
			style="?android:attr/buttonBarButtonStyle"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/pre_nb"
			android:layout_margin="16dp"
			android:id="@+id/downloadproButton1"/>

		<Button
			style="?android:attr/buttonBarButtonStyle"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/pre_pb"
			android:id="@+id/downloadproButton2"
			android:layout_marginRight="16dp"/>

	</LinearLayout>

</LinearLayout>

